<resources>
    <string name="app_name">Gestión de Trámites</string>
    <string name="txt_new_p">NUEVO TRÁMITE</string>
    <string name="label_menu_new_p">Seleccione tipo de trámite</string>
    <string name="procedure_detail">Para primeras licencias, renovaciones y nuevos ejemplares</string>
    <string name="procedure_name">LICENCIA DE CONDUCIR</string>

    <!--Strings para User data form fragment -->
    <string name="UserDataForm_title">COMPLETAR PERFIL</string>
    <string name="UserDataForm_DNI">Número de DNI</string>
    <string name="UserDataForm_Name">Nombre</string>
    <string name="UserDataForm_LastName">Apellido</string>
    <string name="UserDataForm_Address">Domicilio</string>
    <string name="UserDataForm_DateOfBirth">Fecha de nacimiento</string>
    <string name="UserDataForm_SaveButton">GUARDAR</string>

    <!--Strings para singup fragment -->
    <string name="SingUp_title">CREAR NUEVA CUENTA</string>
    <string name="SingUp_Email">Email</string>
    <string name="SingUp_Pass">Contraseña</string>
    <string name="SingUp_ConfirmPass">Confirmar contraseña</string>
    <string name="SingUp_Button">CREAR CUENTA</string>

    <!--Strings para login -->
    <string name="email_login">Email</string>
    <string name="password_login">Contraseña</string>
    <string name="btn_login">INGRESAR</string>
    <string name="account_login">¿Todavía no tenés cuenta?</string>
    <string name="account2_login">Ingrese aquí</string>
    <string name="option">o</string>

    <!--Strings para Profile fragment -->
    <string name="profile_title">PERFIL</string>
    <string name="profile_Email">Email:</string>
    <string name="profile_DNI">DNI:</string>
    <string name="profile_Name">Nombre:</string>
    <string name="address">Dirección: </string>
    <string name="profile_Address">Dirección</string>
    <string name="profile_dob">Fecha de nacimiento:</string>
    <string name="profile_button_Edit">EDITAR</string>
    <string name="profile_change_Pass">CAMBIAR CONTRASEÑA</string>
    <string name="log_out">Cerrar sesión</string>

    <!--Strings para Procedure Lists -->
    <string name="dateTitle">Entregado: </string>
    <string name="stateTitle">Estado: </string>
    <string name="sign">¡No hay trámites disponibles!</string>

    <!--Strings para Item Notification -->
    <string name="Notification">Notificado: </string>
    <string name="notification_empty">¡No hay notificaciones!</string>
</resources>