<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/profile_title"
        android:textAllCaps="true"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_Name"
        android:textColor="@color/secondaryText" />

    <TextView
        android:id="@+id/profile_DNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_DNI"
        android:textColor="@color/secondaryText" />

    <TextView
        android:id="@+id/profile_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_dob"
        android:textColor="@color/secondaryText" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_Email"
        android:textColor="@color/secondaryText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/address"
            android:textColor="@color/secondaryText" />

        <EditText
            android:id="@+id/profile_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/profile_Address"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/edit" />

    </LinearLayout>


        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="bottom"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/infoTheme"
        android:text="@string/profile_change_Pass"
        android:textColor="@color/primaryText"
        android:theme="@style/SecondaryButton"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/closeSession"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/errorTheme"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:theme="@style/ErrorButton"
        tools:ignore="TouchTargetSizeCheck" />


</LinearLayout>
